Fix spacing

--- a/app/styles/ui/_tab-bar.scss
+++ b/app/styles/ui/_tab-bar.scss
@@ -5,9 +5,17 @@
 
   &.vertical {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
     border-right: 1px solid var(--box-border-color);
     height: auto;
+    flex-shrink: 0;
+
+    &:first-child {
+      margin-top: var(--spacing);
+    }
+    &:last-child {
+      margin-bottom: var(--spacing);
+    }
   }
 
   background: var(--tab-bar-background-color);
@@ -126,15 +134,14 @@
     background: var(--background-color);
     font-family: var(--font-family-sans-serif);
     font-size: var(--font-size);
-
-    // Give each item equal space
-    flex: 1;
+    min-width: 150px;
 
     // Center item contest horizontally and vertically
     display: flex;
-    justify-content: center;
+    justify-content: left;
 
     padding: var(--spacing);
+    margin: var(--spacing-half) var(--spacing-double);
 
     // This makes it so that we never render a double-width item border.
     // It has the unintended consequence of making it impossible to have a tab
